Users are only associated with 1 organisation
* The previous behaviour allowed multiple organisations to be associated with a single user. We believe this was prompted by the special case of UKRI where they represent 7 organisations. We know now that UKRI will be added last due to other reasons.
* The cost of allowing users to have multiple organisations is that we won't be able to reliably use the organisation#show page as the landing page for every user. Since if a user is given multiple organisations, we will send them to a landing page for one of them, with no possible way of navigating to the other.
* To remove this dead-end scenario that we aren't planning for, we are restricting every user down to 1 organisation.
* We plan to make this required in a subsequent commit since this is already quite large

Co-authored-by: Agz <a@deberny.com>

--- a/app/views/staff/users/_form.html.haml
+++ b/app/views/staff/users/_form.html.haml
@@ -10,11 +10,12 @@
       legend: { tag: :h2 }
 
   - if @organisations.any?
-    = f.govuk_collection_check_boxes :organisation_ids,
+    = f.govuk_collection_radio_buttons :organisation_id,
         @organisations,
         :id,
         :name,
-        legend: { tag: :h2 }
+        legend: { tag: :h2 , text: t('form.user.organisation.label')},
+        hint_text: t("form.user.organisation.hint")
   - else
     .govuk-inset-text
       = succeed "." do
