--- a/app/views/public/visitors/index.html.haml
+++ b/app/views/public/visitors/index.html.haml
@@ -6,8 +6,7 @@
       %h1.govuk-heading-xl
         = t("page_title.welcome")
 
-      %a.govuk-button.govuk-button--start{ data: { method: "post" }, href: "/auth/auth0", role: 'button', draggable: 'false' }
+      = button_to '/auth/auth0', class: 'govuk-button', role: 'button', draggable: 'false' do
         = t("generic.link.sign_in")
-
         %svg.govuk-button__start-icon{ xmlns: "http://www.w3.org/2000/svg", width: "17.5", height: "19", viewBox: "0 0 33 40", role: "presentation", focusable: "false" }
           %path{ fill: "currentColor", d: "M0 0h13l20 20-20 20H0l20-20z" }
