IATI reporting-org should be BEIS regardless of the user's organisation
Funds and programmes should have their reporting org set as BEIS

Projects created by UKSA (our current only delivery partner) should have their
reporting org set as BEIS

Other future DPs will have themselves set as their reporting org (for now).

Note that these changes are only in the XML representation of the activity, not
the database record.

--- a/app/views/staff/shared/xml/_activity.xml.haml
+++ b/app/views/staff/shared/xml/_activity.xml.haml
@@ -1,7 +1,12 @@
 %iati-activity{"default-currency" => activity.default_currency, "xml:lang" => activity.organisation.language_code }
   %iati-identifier= activity.iati_identifier
-  %reporting-org{"type" => activity.organisation.organisation_type, "ref" => activity.organisation.iati_reference }
-    %narrative= activity.organisation.name
+  - service_owner = Organisation.find_by(service_owner: true)
+  - if activity.organisation.is_government_organisation?
+    %reporting-org{"type" => service_owner.organisation_type, "ref" => service_owner.iati_reference }
+      %narrative= service_owner.name
+  - else
+    %reporting-org{"type" => activity.organisation.organisation_type, "ref" => activity.organisation.iati_reference }
+      %narrative= activity.organisation.name
   %title
     %narrative= activity.title
   %description{"type" => "1"}
