Exercise the new JavaScript testing environment
Add the GOVUK JavaScript detection script to the application layout,
this adds a class to the body element when JavaScript is enabled.

Use the JS detection to test that the JavaScript test environment is
working as expected.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,8 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body{class: 'govuk-template__body app-body-class'}
+    %script
+      document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
     = render partial: 'shared/google_tag_manager_body'
     %a.govuk-skip-link{href: "#main-content"} Skip to main content
     %header.govuk-header{"data-module": "govuk-header", role: "banner"}
