Sector question uses radio buttons
User research showed the sector question was difficult to answer due to
the large number of possible responses. We tested breaking this question
into two steps which made the task much simpler for users.

This is the first step towards breaking the question into two parts.

First the codelist helper is able to return only the sectors in a given
sector category, when no category is supplied, return all sectors.

Then the sector question is presented as radio buttons.

--- a/app/views/staff/activity_forms/sector.html.haml
+++ b/app/views/staff/activity_forms/sector.html.haml
@@ -1,7 +1,9 @@
 = render layout: "wrapper" do |f|
-  = f.govuk_collection_select :sector,
-    yaml_to_objects(entity: "activity", type: "sector", with_empty_item: true),
+  = f.govuk_error_summary
+  = f.hidden_field :sector, value: nil
+  = f.govuk_collection_radio_buttons :sector,
+    sector_radio_options,
     :code,
     :name,
-    label: { tag: 'h1', size: 'xl', text:  I18n.t("page_title.activity_form.show.sector", level: f.object.level) },
-    hint_text: t("helpers.hint.activity.sector.html", level: f.object.level)
+    legend: { tag: "h1", size: "xl", text: t("page_title.activity_form.show.sector", level: f.object.level) },
+    hint_text: t("helpers.fieldset.activity.sector.html", level: f.object.level)
