Add sector category step
In order to keep things simple, introduce sector category as a stand
alone question which sets the sector category thus reducing the number
of sector options shown to the user.

The decision was made to load the sector category values from the
vendor data rather than following what seems to be a pattern of having
the vendor data and translation data. Whilst having the option to have
the values displayed in the UI be different to that of the IATI data, it
was felt better to wait for that need to arise and not duplicate the
data in the code  at this point.

The decision to add the `sector_category_name` method to the model
rather than the activity presenter was made as the amount of work
required to refactor the activity controller to use a presenter was
deemed too large for the scope of this work.

--- a/app/views/staff/activity_forms/sector.html.haml
+++ b/app/views/staff/activity_forms/sector.html.haml
@@ -2,8 +2,7 @@
   = f.govuk_error_summary
   = f.hidden_field :sector, value: nil
   = f.govuk_collection_radio_buttons :sector,
-    sector_radio_options,
+    sector_radio_options(category: @activity.sector_category),
     :code,
     :name,
-    legend: { tag: "h1", size: "xl", text: t("page_title.activity_form.show.sector", level: f.object.level) },
-    hint_text: t("helpers.fieldset.activity.sector.html", level: f.object.level)
+    legend: { tag: "h1", size: "xl", text: t("page_title.activity_form.show.sector", sector_category: @activity.sector_category_name, level: f.object.level) }
