Improve "create activity" content
Improve the labelling for the Create Activity form steps.

This ticket has involved changing many of the strings used in the Activity
create form. Previously the pate title strings were being used as labels for
the fields/fieldsets in the create activity form, but this is no longer
feasible as the content for page titles & fieldset labels need to be different.

--- a/app/views/staff/activity_forms/country.html.haml
+++ b/app/views/staff/activity_forms/country.html.haml
@@ -4,6 +4,6 @@
     :code,
     :name,
     options: { selected: f.object.recipient_country || country_select_options.first.code},
-    label: { size: "xl", tag: "h1" }
+    label: { size: "xl", tag: "h1", text: I18n.t("helpers.fieldset.activity.recipient_country") }
   %script
     accessibleAutocomplete.enhanceSelectElement({ defaultValue: "", selectElement: document.getElementsByTagName("select")[0], showAllValues: true})
