--- a/app/views/staff/activity_forms/identifier.html.haml
+++ b/app/views/staff/activity_forms/identifier.html.haml
@@ -1,2 +1,2 @@
 = render layout: "wrapper" do |f|
-  = f.govuk_text_field :identifier, label: { tag: 'h1', size: 'xl' }
+  = f.govuk_text_field :identifier, label: { tag: 'h1', size: 'xl', text: I18n.t("helpers.fieldset.activity.identifier") }
