Add financials and details tabs to activity
The information shown on the activity show view will be split into
visual tabs.

Prepare the way by allowing tabs to be managed via controllers and
views.

--- a/app/views/staff/activities/show.html.haml
+++ b/app/views/staff/activities/show.html.haml
@@ -1,4 +1,4 @@
-=content_for :page_title_prefix, t("page_title.activity.show", name: @activity.title)
+=content_for :page_title_prefix, t("document_title.activity.show", name: @activity.title)
 
 = link_to t("default.link.back"), activity_back_path(current_user: current_user, activity: @activity), class: "govuk-back-link"
 %main.govuk-main-wrapper#main-content{ role: "main" }
