Move activity show content to tabs
Now that the activity show view has tabs, move the content into the
appropriate tab.

The activity#show action simple redirects to the Financials tab as it
will be used in later work as a 'summary' tab.

During this work it was noted that the `extending_organisation` routes
should be a singular resource so this has been fixed.

--- a/app/views/staff/activities/details.html.haml
+++ b/app/views/staff/activities/details.html.haml
@@ -32,3 +32,18 @@
         .govuk-tabs__panel
           %h2.govuk-heading-l
             = t("page_title.activity.details")
+
+          = render partial: "staff/shared/activities/activity", locals: { activity_presenter: ActivityPresenter.new(@activity) }
+          - if @activity.fund? && policy(:fund).create?
+            = render partial: "staff/shared/activities/programmes", locals: { activity: @activity, activities: @activities }
+
+          - if @activity.programme?
+            = render partial: "staff/shared/activities/projects", locals: { activity: @activity, activities: @activities }
+          - if @activity.programme? && policy(:programme).create?
+            = render partial: "staff/shared/activities/extending_organisation", locals: { activity: @activity }
+
+          - if @activity.project?
+            = render partial: "staff/shared/activities/third_party_projects", locals: { activity: @activity, activities: @activities }
+
+          - if @activity.project? || @activity.third_party_project?
+            = render partial: "staff/shared/activities/implementing_organisations", locals: { activity: @activity, implementing_organisation_presenters: @implementing_organisation_presenters }
