--- a/app/views/staff/extending_organisations/edit.html.haml
+++ b/app/views/staff/extending_organisations/edit.html.haml
@@ -7,7 +7,7 @@
       %h1.govuk-heading-xl
         = @activity.title
 
-      = form_with model: @activity, url: activity_extending_organisation_path(@activity) do |f|
+      = form_with model: @activity, url: activity_extending_organisations_path(@activity.id, @activity.extending_organisation_id) do |f|
         = f.govuk_error_summary
         = f.hidden_field :extending_organisation_id, value: nil
         = f.govuk_collection_radio_buttons :extending_organisation_id,
