--- a/app/views/staff/activities/index.html.haml
+++ b/app/views/staff/activities/index.html.haml
@@ -6,6 +6,9 @@
       %h1.govuk-heading-xl
         = t("page_title.activity.index")
 
+  - if current_user.service_owner?
+    = render partial: "staff/shared/activities/filter", locals: { organisation_id: @organisation_id }
+
   .govuk-grid-row.activity-page
     .govuk-grid-column-full
       = render partial: "staff/shared/activities/table", locals: { activities: @activities }
