(fix) Activities table uses presenters
When displaying activities we should use the presenter and the
`display_title` method, not the raw title as this handles the case where
they may not be a title yet.

--- a/app/views/staff/activities/index.html.haml
+++ b/app/views/staff/activities/index.html.haml
@@ -16,4 +16,4 @@
 
   .govuk-grid-row.activity-page
     .govuk-grid-column-full
-      = render partial: "staff/shared/activities/table", locals: { activities: @activities }
+      = render partial: "staff/shared/activities/table", locals: { activities: @activity_presenters }
