--- a/app/views/staff/shared/activities/_table.html.haml
+++ b/app/views/staff/shared/activities/_table.html.haml
@@ -13,7 +13,7 @@
     %tbody.govuk-table__body
       - activities.each do |activity|
         %tr.govuk-table__row{ id: activity.id }
-          %td.govuk-table__cell= activity.title
+          %td.govuk-table__cell= activity.display_title
           %td.govuk-table__cell= activity.identifier
           %td.govuk-table__cell= t("table.body.activity.level.#{activity.level}")
           %td.govuk-table__cell
