--- a/app/views/staff/shared/activities/_planned_disbursements.html.haml
+++ b/app/views/staff/shared/activities/_planned_disbursements.html.haml
@@ -2,6 +2,6 @@
   .govuk-grid-column-full
     %h2.govuk-heading-m
       = t("page_content.activity.planned_disbursements")
-    - if policy(activity).create?
+    - if policy(activity).add_planned_disbursement?
       = link_to(I18n.t("page_content.planned_disbursements.button.create"), new_activity_planned_disbursement_path(activity), class: "govuk-button")
     = render partial: '/staff/shared/planned_disbursements/table', locals: { planned_disbursements: planned_disbursements }
