Financial quarter and year on planned disbursements
Now that we have the columns we should collect the financial quarter and
year on planned disbursements in the application.

There is a lot going on here so I have kept the start and end date in
the UI for this commit, which makes it feel a bit odd, but they will go
next.

I make financial_quarter and year required fields in this commit but we
pre-fill the add new planned disbursement form with the current values
so when using the UI there is no issue.

This ingest already populates the values from the start date, so the
only place where a planned disbursement can exist without the values is
in out tests.

Once I remove the fields from the UI, I expect to have to update some
specs, but for now the create planned disbursement service also sets the
value if there isn't financial_quarter and year, to keep the test suite
green until I remove the fields.

--- a/app/views/staff/planned_disbursements/_form.html.haml
+++ b/app/views/staff/planned_disbursements/_form.html.haml
@@ -7,6 +7,22 @@
   :description,
   legend: { tag: :h2, size: "s" }
 
+= f.govuk_fieldset legend: { text: nil } do
+  .govuk-grid-row
+    .govuk-grid-column-two-thirds
+      = f.govuk_collection_radio_buttons :financial_quarter,
+        list_of_financial_quarters,
+        :id,
+        :name,
+        inline: true,
+        legend: { text: "Financial quarter" , tag: :h2 }
+    .govuk-grid-column-one-third
+      = f.govuk_collection_select :financial_year,
+        list_of_financial_years,
+        :id,
+        :name,
+        label: { text: "Financial year", tag: :h2, size: "m" }
+
 = f.govuk_date_field :period_start_date
 
 = f.govuk_date_field :period_end_date
@@ -16,7 +32,7 @@
                                :code,
                                :name
 
-= f.govuk_text_field :value
+= f.govuk_text_field :value, width: 20
 
 = f.govuk_fieldset legend: { text: t("form.legend.planned_disbursement.providing_organisation") } do
   %span.govuk-hint= t("form.hint.planned_disbursement.providing_organisation")
