--- a/app/views/staff/shared/planned_disbursements/_table.html.haml
+++ b/app/views/staff/shared/planned_disbursements/_table.html.haml
@@ -31,3 +31,5 @@
           %td.govuk-table__cell
             - if policy(planned_disbursement).edit?
               = a11y_action_link(t('default.link.edit'), edit_activity_planned_disbursement_path(planned_disbursement.parent_activity, planned_disbursement), t("table.body.planned_disbursement.edit_noun"))
+            - if policy(planned_disbursement).revise?
+              = link_to "Revise forecasted spend", new_activity_planned_disbursement_revision_path(planned_disbursement.parent_activity, planned_disbursement)
