A user can cancel revising a planned disbursement
Some users have found it difficult when they find themselves on a view
that creates a new entity with no way out. They could just use the back
button in the browser, but having a 'cancel' button feels more explicit
and closer to the opposite action.

--- a/app/views/staff/planned_disbursements_revisions/new.html.haml
+++ b/app/views/staff/planned_disbursements_revisions/new.html.haml
@@ -28,4 +28,6 @@
 
         = f.govuk_text_field :value, width: 20, label: { text: "Revised forecasted spend" }
 
-        = f.govuk_submit t("default.button.submit")
+        = f.govuk_submit t("action.planned_disbursement.revision.create.button") do
+
+          = link_to "Cancel", organisation_activity_financials_path(@activity.organisation, @activity), class: ["govuk-button", "govuk-button--secondary", ""]
