--- a/app/views/staff/planned_disbursements/_form.html.haml
+++ b/app/views/staff/planned_disbursements/_form.html.haml
@@ -18,4 +18,5 @@
 
 = f.govuk_text_field :value, width: 20
 
-= f.govuk_submit t("default.button.submit")
+= f.govuk_submit t("default.button.submit") do
+  = link_to "Cancel", organisation_activity_financials_path(@activity.organisation, @activity), class: ["govuk-button", "govuk-button--secondary", ""]
