--- a/app/views/staff/planned_disbursements/edit.html.haml
+++ b/app/views/staff/planned_disbursements/edit.html.haml
@@ -3,6 +3,8 @@
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     .govuk-grid-column-two-thirds
+      %span.govuk-caption-l
+        = @activity.delivery_partner_identifier + " " + @activity.title
       %h1.govuk-heading-xl
         = t("page_title.planned_disbursement.edit")
 
