--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -13,16 +13,17 @@
     :name,
     legend: { tag: :h2 }
 
-= f.govuk_fieldset legend: { text: t("form.legend.budget.providing_organisation") } do
-  %span.govuk-hint= t("form.hint.budget.providing_organisation")
-  = f.govuk_text_field :providing_organisation_name
+- if !f.object.budget_type.in?(Budget::TRANSFERRED_BUDGET_TYPES) && !f.object.budget_type.in?(Budget::DIRECT_BUDGET_TYPES)
+  = f.govuk_fieldset legend: { text: t("form.legend.budget.providing_organisation") } do
+    %span.govuk-hint= t("form.hint.budget.providing_organisation")
+    = f.govuk_text_field :providing_organisation_name
 
-  = f.govuk_collection_select :providing_organisation_type,
-                      organisation_type_options,
-                      :code,
-                      :name
+    = f.govuk_collection_select :providing_organisation_type,
+                        organisation_type_options,
+                        :code,
+                        :name
 
-  = f.govuk_text_field :providing_organisation_reference
+    = f.govuk_text_field :providing_organisation_reference
 
 = f.govuk_collection_select :financial_year,
   list_of_financial_years,
