--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -6,22 +6,24 @@
   :description,
   legend: { tag: :h2 }
 
-= f.govuk_collection_radio_buttons :providing_organisation_id,
-  list_of_organisations,
-  :id,
-  :name,
-  legend: { tag: :h2 }
+#providing-org-select.js-hidden
+  = f.govuk_collection_radio_buttons :providing_organisation_id,
+    list_of_organisations,
+    :id,
+    :name,
+    legend: { tag: :h2 }
 
-= f.govuk_fieldset legend: { text: t("form.legend.budget.providing_organisation") } do
-  %span.govuk-hint= t("form.hint.budget.providing_organisation")
-  = f.govuk_text_field :providing_organisation_name
+#providing-org-freeform.js-hidden
+  = f.govuk_fieldset legend: { text: t("form.legend.budget.providing_organisation") } do
+    %span.govuk-hint= t("form.hint.budget.providing_organisation")
+    = f.govuk_text_field :providing_organisation_name
 
-  = f.govuk_collection_select :providing_organisation_type,
-                      organisation_type_options,
-                      :code,
-                      :name
+    = f.govuk_collection_select :providing_organisation_type,
+                        organisation_type_options,
+                        :code,
+                        :name
 
-  = f.govuk_text_field :providing_organisation_reference
+    = f.govuk_text_field :providing_organisation_reference
 
 = f.govuk_collection_select :financial_year,
   list_of_financial_years,
