--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -8,7 +8,7 @@
 
 #providing-org-select.js-hidden
   = f.govuk_collection_radio_buttons :providing_organisation_id,
-    list_of_organisations,
+    list_of_delivery_partners,
     :id,
     :name,
     legend: { tag: :h2 }
